--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>El Titulo del post</title>
+        <title>Bienvenidos a Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
